Move websocket protocol logic to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <script type="text/javascript">
+    const websocketProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+    const websocketHost = `${websocketProtocol}//${location.host}/chat`;
+
     Elm.Main.fullscreen({
-      websocketHost: location.host
+      websocketHost: websocketHost
     });
   </script>
 </body>
